# kinozal_scraper

./: .gitignore  .importlinter  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  TelegramChannelSummarizer.py  anon.session.encrypted  crypto.py  events_pipeline.py  gemini_enricher.py  generic_pipeline.py  github_trending_pipeline.py  json_pipeline.py  kinozal_pipeline.py  links.xlsx  pipeline_config.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  scraper  scraper.py  sheets_storage.py  sources.json  steam_pipeline.py  telegram_notifier.py  telegram_summarizer.py  text_utils.py  youtube.py
.claude/: settings.json
.claude/agents/: architect-reviewer.md
.claude/commands/: implement.md  plan.md
.claude/rules/: mindset.md  testing.md  workflow.md
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  claude-review.yml  pr-link.yml  run-script.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
docs/architecture/: ci.md  clean-kinozal-title.md  files-map.md  gemini.md  information-architecture.md  llm-security.md  observability.md  pipeline.md  principles.md  project-map.md  runtime.md  storage.md  test-coverage.md  testing.md  token-baseline.md
docs/initiatives/: trailer-ai.md
docs/issues/: issue-1-plan.md  issue-2-plan.md  issue-3-plan.md  issue-4-plan.md  issue-5-plan.md  issue-6-plan.md  issue-7-plan.md  issue-8-plan.md
scripts/: __init__.py  check_headers.py  check_red.py  ci-check.sh  ci_check.py  eval_summarizer.py  eval_trailers.py  gen_test_coverage.py  hooks.py  issue_branch.py  new_branch.py  open_pr.py  set_issue_priority.py  validate_issue_sections.py  verify_pr_link.py
specs/001-github-trending/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-trending-metric-semantics/: spec.md  tasks.md
specs/003-github-ru-who-pain/: spec.md  tasks.md
specs/004-telegram-quality-gate-refactor/: spec.md  tasks.md
specs/005-telegram-summarizer-tests/: spec.md  tasks.md
specs/006-lift-legacy-exclusions/: spec.md  tasks.md
specs/007-pipeline-result-ok/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: TelegramChannelSummarizer.py  events_pipeline.py  gemini_enricher.py  github_trending_pipeline.py  http_fetch.py  json_pipeline.py  kinozal_auth.py  kinozal_pipeline.py  pipeline_config.py  steam_pipeline.py  telegram_notifier.py  telegram_summarizer.py  youtube.py
src/kinozal_scraper/: TelegramChannelSummarizer.py  __init__.py  alerting.py  events_pipeline.py  gemini_enricher.py  generic_pipeline.py  github_popular_pipeline.py  github_trending_pipeline.py  http_fetch.py  json_pipeline.py  kinozal_pipeline.py  llm_observability.py  observability.py  pipeline_config.py  sheets_storage.py  soldout_pipeline.py  steam_pipeline.py  telegram_notifier.py  telegram_summarizer.py  text_utils.py  tmdb_trailer.py  trailer_picker_embeddings.py  trailer_picker_llm.py  trailer_strategy.py  youtube.py
tests/: _gspread_doubles.py  _http_doubles.py  conftest.py  test_alerting.py  test_alerting_wiring.py  test_check_headers.py  test_check_red.py  test_ci_check.py  test_complexity_ratchet.py  test_crypto.py  test_crypto_unit.py  test_e2e_github_trending.py  test_e2e_kinozal_titles.py  test_eval_summarizer.py  test_eval_trailers.py  test_events_pipeline.py  test_gemini_enricher.py  test_generic_pipeline.py  test_github_popular_pipeline.py  test_github_trending_pipeline.py  test_goal_function_sync.py  test_hooks.py  test_http_fetch.py  test_import_contracts.py  test_issue_branch.py  test_json_pipeline.py  test_kinozal_auth.py  test_kinozal_pipeline.py  test_llm_observability.py  test_new_branch.py  test_observability.py  test_observability_wiring.py  test_open_pr.py  test_package_importable.py  test_pipeline_config.py  test_pr_template.py  test_prompt_injection.py  test_repo_layout.py  test_ruff_arg_slf_rules.py  test_ruff_dead_code_rule.py  (+20 more)
(+7 files in other folders)
