[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kinozal_scraper"
version = "0.0.0"
description = "Declarative scraping pipelines for kinozal.tv, Steam, GitHub trending and Telegram-channel summaries."
requires-python = ">=3.12"
# Runtime dependencies are deliberately NOT declared here. The canonical source
# stays requirements*.in/.txt + pip-compile (workflow #7); install the package
# itself with `pip install -e . --no-deps` so it never shadows the lockfile.

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".git",
    ".audit-tmp",
    ".idea",
    ".ruff_cache",
    ".claude",
    ".venv",
    "__pycache__",
    "pytest-cache-files-*",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "BLE",
    "TRY400",
    # Dead-code ratchet (#235) — flag commented-out code on new/changed code.
    "ERA001",
    # Complexity ratchet (#233) — hold back method sprawl on new/changed code.
    "C901",     # mccabe cyclomatic complexity
    "PLR0912",  # too-many-branches
    "PLR0915",  # too-many-statements
    # Module-docstring gate (#253) — replaced bespoke scripts/check_headers.py.
    "D100",     # missing docstring in public module
    "D104",     # missing docstring in public package (__init__.py)
    "D419",     # empty/whitespace-only docstring
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Tests were never docstring-checked (check_headers scanned src/ only); keep
# them out of the D100/D104/D419 gate (#253).
"tests/**" = ["D100", "D104", "D419"]

[tool.ruff.lint.mccabe]
# Align C901 with PLR0912's default branch threshold (12) rather than tuning to
# today's code. PLR0912/PLR0915 stay on ruff defaults (12 branches / 50 statements).
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -p no:cacheprovider"
# Put src/ on sys.path so `import kinozal_scraper.<module>` resolves in tests
# without requiring an editable install — the package dir is src/kinozal_scraper.
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^scraper\\.py$",
]
